Fix missing border

--- a/webview/src/experiments/components/table/styles.module.scss
+++ b/webview/src/experiments/components/table/styles.module.scss
@@ -338,7 +338,7 @@ $bullet-size: calc(var(--design-unit) * 4px);
           content: '';
           position: absolute;
           bottom: 0;
-          left: 0;
+          left: 1px;
           width: 100%;
           height: 1px;
           background-color: $header-border-color;
@@ -605,7 +605,7 @@ $bullet-size: calc(var(--design-unit) * 4px);
       content: '';
       position: absolute;
       top: 0;
-      left: 0px;
+      left: 1px;
       height: 100%;
       width: 1px;
       background-color: $header-border-color;
